sphinx/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sphinx
  labels:
    app.kubernetes.io/name: sphinx
    app.kubernetes.io/part-of: sphinx-gateway
